--- a/.azdo/pipelines/pipes/templates/build-webapp-template.yml
+++ b/.azdo/pipelines/pipes/templates/build-webapp-template.yml
@@ -2,6 +2,8 @@
 # Template to build the WebApp and create artifacts
 # ----------------------------------------------------------------------------------------------------
 parameters: 
+- name: buildDeployApps
+  default: true
 - name: stageName
   default: 'CI'
 - name: environment
@@ -31,23 +33,24 @@ jobs:
     displayName: 'Display Variables and Tree'
     continueOnError: true
 
-  - task: DotNetCoreCLI@2
-    displayName: 'Build WebApp project'
-    inputs:
-      projects: ' ${{ parameters.rootDirectory }}/*.csproj'
-      arguments: '--output publish_output --configuration Release'
+  - ${{ if eq(lower(parameters.buildDeployApps), 'true') }}:
+    - task: DotNetCoreCLI@2
+      displayName: 'Build WebApp project'
+      inputs:
+        projects: ' ${{ parameters.rootDirectory }}/*.csproj'
+        arguments: '--output publish_output --configuration Release'
 
-  - task: DotNetCoreCLI@2
-    displayName: 'Publish WebApp project'
-    inputs:
-      command: publish
-      publishWebProjects: false
-      projects: '${{ parameters.rootDirectory }}/*.csproj'
-      arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
-      
-  - task: PublishPipelineArtifact@1
-    displayName: 'Publish WebApp Artifacts'
-    inputs:
-      targetPath: '$(Build.ArtifactStagingDirectory)'
-      artifact: WebApp
-      publishLocation: 'pipeline'
+    - task: DotNetCoreCLI@2
+      displayName: 'Publish WebApp project'
+      inputs:
+        command: publish
+        publishWebProjects: false
+        projects: '${{ parameters.rootDirectory }}/*.csproj'
+        arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
+        
+    - task: PublishPipelineArtifact@1
+      displayName: 'Publish WebApp Artifacts'
+      inputs:
+        targetPath: '$(Build.ArtifactStagingDirectory)'
+        artifact: WebApp
+        publishLocation: 'pipeline'
