--- a/.azdo/pipelines/pipes/templates/create-infra-template.yml
+++ b/.azdo/pipelines/pipes/templates/create-infra-template.yml
@@ -2,6 +2,8 @@
 # Template to deploy Azure Resources for one environment
 # ----------------------------------------------------------------------------------------------------
 parameters: 
+- name: createInfra
+  default: true
 - name: stageName
   default: 'CI'
 - name: environment
@@ -39,6 +41,7 @@ jobs:
   - task: CmdLine@2
     inputs:
       script: |
+        echo "createInfra=${{ parameters.createInfra }}"
         echo "stageName=${{ parameters.stageName }}"
         echo "environment=${{ parameters.environment }}"
         echo "azureSubscription=${{ parameters.azureSubscription }}"
@@ -53,42 +56,43 @@ jobs:
     displayName: 'Display Variables and Tree'
     continueOnError: true
 
-  - task: AzureResourceGroupDeployment@2
-    displayName: '1. Create APIM Consumption'
-    inputs:
-      azureSubscription: ${{ parameters.azureSubscription }}
-      resourceGroupName: ${{ parameters.resourceGroupName }}
-      location: ${{ parameters.region }}
-      csmFile: '$(templateDirectory)\api-management-consumption.json'
-      overrideParameters: '-apimName ${{ parameters.apiAppAPIMName }}2 -organizationName ${{ parameters.organizationName }} -adminEmail ${{ parameters.adminEmail }}'
-      deploymentOutputs: ResourceGroupDeploymentOutputs
+  - ${{ if eq(lower(parameters.createInfra), 'true') }}:
+    - task: AzureResourceGroupDeployment@2
+      displayName: '1. Create APIM Consumption'
+      inputs:
+        azureSubscription: ${{ parameters.azureSubscription }}
+        resourceGroupName: ${{ parameters.resourceGroupName }}
+        location: ${{ parameters.region }}
+        csmFile: '$(templateDirectory)\api-management-consumption.json'
+        overrideParameters: '-apimName ${{ parameters.apiAppAPIMName }}2 -organizationName ${{ parameters.organizationName }} -adminEmail ${{ parameters.adminEmail }}'
+        deploymentOutputs: ResourceGroupDeploymentOutputs
 
-  - task: AzureResourceGroupDeployment@2
-    displayName: '2. Create APIM Dev'
-    inputs:
-      azureSubscription: ${{ parameters.azureSubscription }}
-      resourceGroupName: ${{ parameters.resourceGroupName }}
-      location: ${{ parameters.region }}
-      csmFile: '$(templateDirectory)\api-management-core.json'
-      overrideParameters: '-serviceName ${{ parameters.apiAppAPIMName }}3 -publisherName ${{ parameters.organizationName }} -publisherEmail ${{ parameters.adminEmail }}'
-      deploymentOutputs: ResourceGroupDeploymentOutputs
+    - task: AzureResourceGroupDeployment@2
+      displayName: '2. Create APIM Dev'
+      inputs:
+        azureSubscription: ${{ parameters.azureSubscription }}
+        resourceGroupName: ${{ parameters.resourceGroupName }}
+        location: ${{ parameters.region }}
+        csmFile: '$(templateDirectory)\api-management-core.json'
+        overrideParameters: '-serviceName ${{ parameters.apiAppAPIMName }}3 -publisherName ${{ parameters.organizationName }} -publisherEmail ${{ parameters.adminEmail }}'
+        deploymentOutputs: ResourceGroupDeploymentOutputs
 
-  - task: AzureResourceGroupDeployment@2
-    displayName: '3. Create WebAPI Service'
-    inputs:
-      azureSubscription: ${{ parameters.azureSubscription }}
-      resourceGroupName: ${{ parameters.resourceGroupName }}
-      location: ${{ parameters.region }}
-      csmFile: '$(templateDirectory)\appservice-web-api.json'
-      overrideParameters: '-appName ${{ parameters.apiAppName }}'
-      deploymentOutputs: ResourceGroupDeploymentOutputs
+    - task: AzureResourceGroupDeployment@2
+      displayName: '3. Create WebAPI Service'
+      inputs:
+        azureSubscription: ${{ parameters.azureSubscription }}
+        resourceGroupName: ${{ parameters.resourceGroupName }}
+        location: ${{ parameters.region }}
+        csmFile: '$(templateDirectory)\appservice-web-api.json'
+        overrideParameters: '-appName ${{ parameters.apiAppName }}'
+        deploymentOutputs: ResourceGroupDeploymentOutputs
 
-  - task: AzureResourceGroupDeployment@2
-    displayName: '4. Create WebApp Service'
-    inputs:
-      azureSubscription: ${{ parameters.azureSubscription }}
-      resourceGroupName: ${{ parameters.resourceGroupName }}
-      location: ${{ parameters.region }}
-      csmFile: '$(templateDirectory)\appservice-web-app.json'
-      overrideParameters: '-appName ${{ parameters.webAppName }}'
-      deploymentOutputs: ResourceGroupDeploymentOutputs
+    - task: AzureResourceGroupDeployment@2
+      displayName: '4. Create WebApp Service'
+      inputs:
+        azureSubscription: ${{ parameters.azureSubscription }}
+        resourceGroupName: ${{ parameters.resourceGroupName }}
+        location: ${{ parameters.region }}
+        csmFile: '$(templateDirectory)\appservice-web-app.json'
+        overrideParameters: '-appName ${{ parameters.webAppName }}'
+        deploymentOutputs: ResourceGroupDeploymentOutputs
